# pavex-html

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
app/: Cargo.toml
app/src/: asset.rs  blueprint.rs  configuration.rs  lib.rs  template.rs
app/src/routes/: css_asset.rs  index.rs  js_asset.rs  mod.rs  static_assets.rs  storage_create.rs
server/: Cargo.toml
server/configuration/: base.yml  dev.yml  prod.yml
server/templates/: base.html
server/tests/integration/: helpers.rs  index.rs  main.rs  static_asset.rs  storage_create.rs
server_sdk/: Cargo.toml
server_sdk/src/: lib.rs
shuttle/: Cargo.toml
shuttle/src/: main.rs  shuttle_pavex.rs
static/: screen.css  script.js
templates/: base.html
