[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/bp.rs"
name = "bp"

[lints.rust]
# `pavex_ide_hint` is used in Pavex's `f!` macro to "nudge" the IDE
# and force it to provide completions and "go-to-definition" correctly
# for the paths passed to the `f!` macro.
# It must be allowed in all local crates that use `f!`.
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(pavex_ide_hint)'] }

[dependencies]
cargo_px_env = "0.1"
mime_guess = "2.0.5"
opendal = { version = "0.51.2", features = [ "services-fs" ] }
pavex = { version = "0.1.74" }
pavex_tracing = { version = "0.1.74" }
pavex_cli_client = { version = "0.1.74" }
rust-embed-for-web = "11.2.1"
serde = { version = "1", features = ["derive"] }
tera = "1.20.0"
tracing = "0.1"
tracing_log_error = "0.1"
workspace_hack = { path = "../workspace_hack" }


